--- a/Cotizador/templates/neumatico_list.html
+++ b/Cotizador/templates/neumatico_list.html
@@ -11,10 +11,8 @@
 
 {% block buscar %} {% endblock %}
 
-{% for neumatico in object_list %}
-    <li>{{neumatico}}</li>
-{% endfor %}    
-</ul>
-
+{% for Neumatico in object_list %}
+    <li>{{Neumatico}}</li>
+{% endfor %}
 </body>
 </html>
